reformated my li in part 1

--- a/dictionaryapp/src/App.css
+++ b/dictionaryapp/src/App.css
@@ -27,12 +27,16 @@
   flex-direction: row;
 }
 
-.word1 {
+.word {
   text-transform: uppercase;
 }
-.sense1 {
+.sense {
   text-transform: uppercase;
   color: white;
+}
+.def {
+  display: flex;
+  justify-content: center;
 }
 /* .App {
   text-align: center;
