--- a/dictionaryapp/src/App.css
+++ b/dictionaryapp/src/App.css
@@ -38,6 +38,17 @@
   display: flex;
   justify-content: center;
 }
+
+.random {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.section2 {
+  display: flex;
+  flex-direction: column;
+}
 /* .App {
   text-align: center;
 }
