--- a/dictionaryapp/src/components/section2/Section2.css
+++ b/dictionaryapp/src/components/section2/Section2.css
@@ -1,7 +1,7 @@
 .section2 {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr;
+  grid-template-columns: .5fr 1.5fr 1.5fr .5fr;
+  grid-template-rows: .2fr .2fr .2fr 1.4fr;
 }
 
 .header1 {
@@ -13,6 +13,8 @@
 .header2 {
   grid-column: 1/2;
   grid-row: 2/3;
+  font-size: 10px;
+  text-align: center
 }
 
 .timer {
