completed my project completely, css is looking good and there are no outstanding errors

--- a/dictionaryapp/src/App.css
+++ b/dictionaryapp/src/App.css
@@ -8,19 +8,61 @@ font-family: 'Shadows Into Light', cursive;
 font-family: 'Amatic SC', cursive;
 font-family: 'Permanent Marker', cursive; */
 a {
+  font-size: 20px;
   margin: 7px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: wheat;
+}
+
+h1 {
+  font-size: 25px;
+  font-family: 'Amatic SC', cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+h2 {
+  font-size: 20px;
+  font-family: 'Amatic SC', cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+h3 {
+  font-size: 20px;
+  font-family: 'Caveat', cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+h4 {
+  font-size: 20px;
+  font-family: 'Gloria Hallelujah', cursive;
+  color: white;
+  text-transform: uppercase;
 }
 
 ul {
   font-size: 20px;
   font-weight: 400px;
   font-family: 'Indie Flower', cursive;
+  color: white;
+  text-transform: uppercase;
+}
+
+p {
+  color: white;
+  text-transform: uppercase;
 }
 
 .App {
   display: grid;
   grid-template-columns: .25fr 1.5fr .25fr;
   grid-template-rows: .2fr 2.6fr .2fr;
+  height: 100vh;
+  background-image: url('https://i.imgur.com/29hWVQY.jpg');
+  background-size: cover;
 }
 
 .nav {
@@ -36,8 +78,70 @@ ul {
   grid-row: 2/3;
 }
 
+.form1 {
+  color: wheat;
+}
+
 footer {
-  grid-column: 2/3;
+  grid-column: 1/4;
   grid-row: 3/4;
   text-align: center;
+}
+
+.footer {
+  grid-column: 1/2;
+  grid-row: 3/4;
+  text-align: left;
+}
+
+.link {
+  grid-column: 3/4;
+  grid-row: 3/4;
+  text-align: right;
+}
+
+@media only screen and (max-width: 768px) {
+  .App {
+    display: grid;
+    grid-template-columns: .25fr 1.5fr .25fr;
+    grid-template-rows: .2fr 2.6fr .2fr;
+    height: 100vh;
+    background-image: url('https://i.imgur.com/saFdErE.jpg');
+    background-size: cover;
+  }
+
+  .nav {
+    grid-column: 2/3;
+    grid-row: 1/4;
+    text-decoration: none;
+    text-align: center;
+    font-family: 'Gloria Hallelujah', cursive;
+  }
+
+  .container {
+    grid-column: 1/4;
+    grid-row: 2/3;
+  }
+
+  .form1 {
+    color: wheat;
+  }
+
+  footer {
+    grid-column: 1/4;
+    grid-row: 3/4;
+    text-align: center;
+  }
+
+  .footer {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    text-align: left;
+  }
+
+  .link {
+    grid-column: 3/4;
+    grid-row: 3/4;
+    text-align: right;
+  }
 }
