--- a/dictionaryapp/src/components/section2/Section2.css
+++ b/dictionaryapp/src/components/section2/Section2.css
@@ -1,7 +1,7 @@
 .section2 {
   display: grid;
-  grid-template-columns: .5fr 1.5fr 1.5fr .5fr;
-  grid-template-rows: .2fr .2fr .2fr 1.4fr;
+  grid-template-columns: .75fr .75fr .75fr .75fr;
+  grid-template-rows: .3fr .3fr .3fr 2.1fr;
 }
 
 .header1 {
@@ -20,16 +20,24 @@
 .timer {
   grid-column: 2/3;
   grid-row: 2/3;
+  color: white;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .header3 {
   grid-column: 3/4;
   grid-row: 2/3;
+  text-align: center;
 }
 
 .form1 {
   grid-column: 4/5;
   grid-row: 2/3;
+  display: flex;
+  justify-content: center;
+  align-self: center;
 }
 
 .word1 {
@@ -62,4 +70,80 @@
 .def2 {
   grid-column: 3/5;
   grid-row: 4/5;
+}
+
+@media only screen and (max-width: 768px) {
+  .section2 {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr ;
+    grid-template-rows: .25fr .25fr .25fr 2fr .25fr .25fr 2fr;
+  }
+
+  .header1 {
+    grid-column: 2/3;
+    grid-row: 1/2;
+    text-align: center;
+  }
+
+  .header2 {
+    grid-column: 1/2;
+    grid-row: 2/3;
+    font-size: 10px;
+    text-align: center
+  }
+
+  .timer {
+    grid-column: 3/4;
+    grid-row: 2/3;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
+
+  .header3 {
+    grid-column: 1/2;
+    grid-row: 5/6;
+    text-align: center;
+  }
+
+  .form1 {
+    grid-column: 3/4;
+    grid-row: 5/6;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  }
+
+  .word1 {
+    grid-column: 1/2;
+    grid-row: 3/4;
+    text-align: right;
+  }
+
+  .sense1 {
+    grid-column: 3/4;
+    grid-row: 3/4;
+  }
+
+  .word2 {
+    grid-column: 1/2;
+    grid-row: 6/7;
+    text-align: right;
+  }
+
+  .sense2 {
+    grid-column: 3/4;
+    grid-row: 6/7;
+  }
+
+  .def1 {
+    grid-column: 1/3;
+    grid-row: 4/5;
+  }
+
+  .def2 {
+    grid-column: 1/3;
+    grid-row: 7/8;
+  }
 }
